Add new params dataset
